# social-media-downloader

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/core/: downloadEngine.ts  provider.ts
src/providers/: instagram.ts
src/types/: index.ts
